derive/tests/ui/attr-invalid-meta-list-names.stderr
error: Invalid attribute parameter(s): 'Xalias'. Expected 'alias'
 --> $DIR/attr-invalid-meta-list-names.rs:7:2
  |
7 |       /// Returns a protocol version
  |  _____^
8 | |     #[rpc(name = "protocolVersion", Xalias("alias"))]
9 | |     fn protocol_version(&self) -> Result<String>;
  | |_________________________________________________^
